tests/Tuc/Fixtures/errors/MissingParticipants.tuc
tuc parse error test
  participants
